<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="MissingClass">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/Fruit"
            android:fontFamily="@font/circular"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary" />

        <Spinner
            android:id="@+id/spinnerfruit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:addStatesFromChildren="true"
            android:alwaysDrawnWithCache="true"
            android:animateLayoutChanges="true"
            android:animationCache="true"
            android:background="@drawable/rectangle"
            android:dropDownWidth="match_parent"
            android:fontFamily="@font/circular"
            android:foregroundTint="#4CAF50"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/select_fruit"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14.5sp"
            android:visibility="visible" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/Gatewall"
            android:fontFamily="@font/circular"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary" />
        <Spinner
            android:id="@+id/spinnergatewall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:addStatesFromChildren="true"
            android:alwaysDrawnWithCache="true"
            android:animateLayoutChanges="true"
            android:animationCache="true"
            android:background="@drawable/rectangle"
            android:dropDownWidth="match_parent"
            android:fontFamily="@font/circular"
            android:foregroundTint="#4CAF50"
            android:hapticFeedbackEnabled="true"
            android:hint="@string/select_fruit"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14.5sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn"
            android:text="@string/filter"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>

<android.support.design.widget.BottomNavigationView
android:id="@+id/navigation"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginEnd="0dp"
android:layout_marginStart="0dp"
android:background="?android:attr/windowBackground"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintLeft_toLeftOf="parent"
app:layout_constraintRight_toRightOf="parent"
app:menu="@menu/main_menu" />
</android.support.constraint.ConstraintLayout>