<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:focusable="true"
                android:fontFamily="@font/merinda"
                android:lineSpacingExtra="8dp"
                android:padding="20dp"
                android:text="AMG - Atturu's Mango Gardens"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <android.support.design.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineAmbientShadowColor="@color/cardview_shadow_start_color"
                android:padding="50dp"
                android:visibility="visible"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints,PrivateResource,UnusedAttribute"
                tools:layout_editor_absoluteY="91dp">

                <TextView
                    android:id="@+id/about1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:fontFamily="@font/circular"
                    android:lineSpacingExtra="8dp"
                    android:padding="17dp"
                    android:textColor="@android:color/black"
                    android:text="@string/Fruit_Types"
                    android:textSize="15sp" />
            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineAmbientShadowColor="@color/cardview_shadow_start_color"
                android:padding="50dp"
                android:visibility="visible"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toTopOf="@+id/materialCardView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:fontFamily="@font/circular"
                    android:lineSpacingExtra="8dp"
                    android:padding="18dp"
                    android:textColor="@android:color/black"
                    android:text="@string/address"
                    android:textSize="15sp" />


            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:outlineAmbientShadowColor="@color/cardview_shadow_start_color"
                android:padding="50dp"
                android:visibility="visible"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toTopOf="@+id/sign_out"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints,PrivateResource,UnusedAttribute">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cb"
                    android:lineSpacingExtra="8dp"
                    android:padding="20dp"
                    android:text="@string/quote"
                    android:textColor="@color/common_google_signin_btn_text_light_pressed"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="377dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="45dp"
                    android:fontFamily="@font/circular"
                    android:gravity="end"
                    android:nestedScrollingEnabled="true"
                    android:padding="32dp"
                    android:text="@string/Author"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:verticalScrollbarPosition="defaultPosition"
                    app:layout_constraintTop_toBottomOf="@+id/about1" />

            </android.support.design.card.MaterialCardView>


            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:outlineAmbientShadowColor="@color/cardview_shadow_start_color"
                android:padding="50dp"
                android:visibility="visible"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toTopOf="@+id/sign_out"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints,PrivateResource,UnusedAttribute">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginBottom="50dp"
                    android:focusable="true"
                    android:fontFamily="@font/circular"
                    android:gravity="start|left"
                    android:lineSpacingExtra="8dp"
                    android:paddingBottom="60dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:text="For More Info :"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/fb"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerInParent="true"
                        android:outlineAmbientShadowColor="@color/common_google_signin_btn_text_light_disabled"
                        android:padding="10dp"
                        android:src="@drawable/facebook" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/cardview_shadow_start_color"
                        android:showDividers="middle" />

                    <ImageView
                        android:id="@+id/insta"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerInParent="true"
                        android:outlineAmbientShadowColor="@color/common_google_signin_btn_text_light"
                        android:padding="10dp"
                        android:src="@drawable/instagram" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/cardview_shadow_start_color"
                        android:showDividers="middle" />

                    <ImageView
                        android:id="@+id/whatsapp"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerInParent="true"
                        android:outlineAmbientShadowColor="@color/common_google_signin_btn_text_light"
                        android:padding="10dp"
                        android:src="@drawable/whatsapp" />
                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/cardview_shadow_start_color"
                        android:showDividers="middle" />

                    <ImageView
                        android:id="@+id/gmail"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerInParent="true"
                        android:outlineAmbientShadowColor="@color/common_google_signin_btn_text_light"
                        android:padding="10dp"
                        android:src="@drawable/gmail" />
                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@color/cardview_shadow_start_color"
                        android:showDividers="middle" />

                    <ImageView
                        android:id="@+id/map"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_centerInParent="true"
                        android:outlineAmbientShadowColor="@color/common_google_signin_btn_text_light"
                        android:padding="10dp"
                        android:src="@drawable/location" />
                </LinearLayout>
            </android.support.design.card.MaterialCardView>

            <Button
                android:id="@+id/sign_out"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/materialCardView2"
                android:layout_gravity="center"
                android:layout_marginBottom="60dp"
                android:background="@drawable/btn"
                android:gravity="center"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                tools:ignore="ObsoleteLayoutParam" />
        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/main_menu" />

</android.support.constraint.ConstraintLayout>

